--- a/API/pom.xml
+++ b/API/pom.xml
@@ -47,6 +47,11 @@
 			<artifactId>spring-security-crypto</artifactId>
 			<version>6.1.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>4.12.1</version>
+		</dependency>
 
 	</dependencies>
 
